@@ -36,6 +36,7 @@
   "search.result.one": "1 Suchergebnis",
   "search.result.other": "# Suchergebnisse",
   "search.tokenizer": "[\s\-]+",
+  "skip.link.title": "Zum Inhalt",
   "source.link.title": "Quellcode",
   "toc.title": "Inhaltsverzeichnis"
 }[key] }}{% endmacro %}
